fix white space

--- a/public/stillalive.css
+++ b/public/stillalive.css
@@ -70,6 +70,7 @@ a {
 
 .container_lyrics {
     display: block;
+    white-space: pre;
 }
 
 .container_lyrics>br {
